# app/Http/Controllers/Controller.php
@@ -6,15 +6,15 @@ use OpenApi\Annotations as OA;
 /**
  * @OA\Info(
  *      version="1.0",
- *      title="My Rest API", 
- *      description="Laravel project to practice developing Rest API with L5 Swagger OpenApi",
+ *      title="Admin Control Panel", 
+ *      description="For Admin Only",
  *      x={
  *          "logo": {
  *              "url": "https://miro.medium.com/v2/resize:fit:1200/1*J3G3akaMpUOLegw0p0qthA.png"
  *          }
  *      },
  *      @OA\Contact(
- *          name="Theodorus",
+ *          name="Developer : Theodorus",
  *          email="theostevsetiawan@gmail.com"
  *      ),
  * )
